[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/textures/joystick-left_button.png" type="Texture" id=1]
[ext_resource path="res://utils/scripts/Joystick.gd" type="Script" id=2]
[ext_resource path="res://assets/textures/joystick-action_button.png" type="Texture" id=3]
[ext_resource path="res://assets/textures/joystick-interact_button.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 256.0

[sub_resource type="CircleShape2D" id=2]
radius = 128.0

[sub_resource type="CircleShape2D" id=3]
radius = 128.0

[node name="Joystick" type="Node2D"]
script = ExtResource( 2 )

[node name="Directional" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.486275 )
texture = ExtResource( 1 )

[node name="DirectionalArea" type="Area2D" parent="Directional"]
collision_layer = 524288
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Directional/DirectionalArea"]
shape = SubResource( 1 )

[node name="ActionButton" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.509804 )
texture = ExtResource( 3 )

[node name="ActionArea" type="Area2D" parent="ActionButton"]
collision_layer = 524288
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActionButton/ActionArea"]
shape = SubResource( 2 )

[node name="InteractButton" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.521569 )
texture = ExtResource( 4 )

[node name="InteractArea" type="Area2D" parent="InteractButton"]
collision_layer = 524288
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractButton/InteractArea"]
shape = SubResource( 3 )
[connection signal="input_event" from="Directional/DirectionalArea" to="." method="_on_DirectionalArea_input_event"]
[connection signal="input_event" from="ActionButton/ActionArea" to="." method="_on_ActionArea_input_event"]
[connection signal="input_event" from="InteractButton/InteractArea" to="." method="_on_InteractArea_input_event"]
